--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ crate-type = ["cdylib"] # Compile to a dynamic library
 [dependencies]
 retour = { version = "0.4.0-alpha.1", features = ["static-detour"] }
 once_cell = "1.18.0"
+lazy_static = "1.4.0"
+parking_lot = "0.12.1"
 
 [dependencies.windows]
 version = "0.51.1"
