--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,12 @@
-[package]
-name = "mo2-rs"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+
+members = [
+    "crates/*",
+    "mo2-rs",
+]
+resolver = "2"
 
 [profile.release]
-strip = true # Strip debug symbols from the binary
-lto = true # Enable link-time optimization
-
-[lib]
-crate-type = ["cdylib"] # Compile to a dynamic library
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-retour = { version = "0.4.0-alpha.1", features = ["static-detour"] }
-once_cell = "1.18.0"
-lazy_static = "1.4.0"
-parking_lot = "0.12.1"
-
-[dependencies.windows]
-version = "0.51.1"
-features = [
-    "Win32_Foundation",
-    "Win32_UI_Input_KeyboardAndMouse",
-    "Win32_System_WindowsProgramming",
-    "Win32_System_SystemServices",
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_Graphics_OpenGL",
-    "Win32_System_LibraryLoader",
-    "Win32_System_Console",
-    "Win32_Graphics_Gdi",
-]
+opt-level = 3
+lto = true
+strip = true
